--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Rainbow Agency Sharechat Payment Calculator</title>
+	<title> Rainbow Agency Sharechat Payment Calculator</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		body {
-			background: linear-gradient(#fc466b,#3f5efb,#a99ba2);
+			background: linear-gradient(#9bfc46,#3f5efb,#ce0369);
 		}
 
 		.container {
