--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Rainbow Agency Sharechat Payment Calculator</title>
+	<title>Rainbow Agency Sharechat Payment Calculator</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
@@ -12,7 +12,7 @@
 		.container {
 			margin: 30px auto;
 			padding: 80px;
-			background: linear-gradient(to top,#ff9bb3#,#366CDAA);
+			background: linear-gradient(to top,#47c1f5#,#366CDAA);
 			box-shadow: 0px 10px 30px hwb(277 6% 15% / 0.921);
 			max-width: 500px;
 			border-radius: 8px;
@@ -32,7 +32,7 @@
 		.card {
 			margin-top: 20px;
 			padding: 20px;
-			background: linear-gradient(to bottom, #a99ba2 0%, hwb(319 7% 13% / 0.836) 100%);
+			background: linear-gradient(to bottom, #a99ba2 0%, hwb(140 19% 20% / 0.836) 100%);
 			box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 			max-width: 500px;
 			border-radius: 8px;
@@ -56,18 +56,18 @@
 			border: none;
 			outline: none;
 			background:none;
-			box-shadow: 0px 1px 2px #580588dc;
+			box-shadow: 0px 1px 2px #e8247cdc;
 		}
 
 		button {
 			padding: 8px 3px;
-			background: linear-gradient(to bottom, #5c0fd0 0%, rgb(67, 75, 237) 100%);
+			background: linear-gradient(to bottom, #d00f8c 0%, rgb(67, 75, 237) 100%);
 			color: rgb(191, 197, 185);
 			border: none;
 			border-radius: 8px;
 			font-size: 14px;
 			font-weight: bold;
-			box-shadow: 2px 2px 0px hwb(307 25% 11%);
+			box-shadow: 2px 2px 0px hwb(63 30% 27%);
 			cursor: pointer;
 			transition: background-color 0.2s ease-in-out, transform 0.2s ease-in-out;
 		}
@@ -96,7 +96,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>SHARECHAT PAYMENT CALCULATOR</h1>
+		<h1>RAINBOW AGENCY SHARECHAT PAYMENT CALCULATOR</h1>
 		<div class="card">
 			<label for="gems">Number of Gems:</label>
 			<input type="number" id="gems" name="gems" min="0" max="1000000" required>
