--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		body {
-			background: linear-gradient(#9bfc46,#3f5efb,#ce0369);
+			background: linear-gradient(#f6f6f7,#f1f1f2,#f5f1f3);
 		}
 
 		.container {
