--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		body {
-			background: linear-gradient(#000004,#01010b,#0a0005);
+			background: linear-gradient(#ea5555,#7484e9,#9cde67);
 		}
 
 		.container {
@@ -23,7 +23,7 @@
 			margin-top: 0;
 			font-size: 33px;
 			font-weight: bold;
-			color: hwb(330 81% 15% / 0.789);
+			color: hwb(339 9% 18% / 0.789);
 			text-shadow: 2px 2px rgb(10, 10, 10);
 			letter-spacing: 2px;
 			text-transform: uppercase;
