--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		body {
-			background: linear-gradient(#edebeb,#7484e9,#9cde67);
+			background: linear-gradient(#edebeb,#7484e9,#edeeed);
 		}
 
 		.container {
