--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		.card {
 			margin-top: 20px;
 			padding: 20px;
-			background: linear-gradient(to bottom, #e01b7e 0%, hwb(196 10% 29% / 0.836) 100%);
+			background: linear-gradient(to bottom, #e4e793 0%, hwb(196 10% 29% / 0.836) 100%);
 			box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 			max-width: 500px;
 			border-radius: 8px;
