--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	<div class="container">
 		<h1>RAINBOW AGENCY SHARECHAT PAYMENT CALCULATOR</h1>
 		<div class="card">
-			<label for="gems">Number of Gems:</label>
+			<label for="gems">Gems of Amount:</label>
 			<input type="number" id="gems" name="gems" min="0" max="1000000" required>
 			<button type="button" onclick="calculate()">Calculate </button>
 		</div>
