--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
 		</div>
 		<div id="paymentResult" class="result"></div>
 	</div>
-
+<h1>Designed By Developer Karthi</h1>
+		<div class="card">
 	<script>
 		function calculate() {
   var gems = parseInt(document.getElementById("gems").value);
